# rust-raytracer

./: .gitignore  Cargo.toml  LICENSE
data/: test.json
raytracer/: Cargo.toml
raytracer/src/: camera.rs  irradiancecache.rs  light.rs  main.rs  material.rs  ray.rs  scene.rs  vec3.rs  world.rs
raytracer/src/integrator/: irradiancecache.rs  mod.rs  photon_mapper.rs
raytracer/src/objects/: aabb.rs  bvh.rs  cube.rs  hit.rs  medium.rs  mesh.rs  mod.rs  rectangle.rs  sphere.rs  transform.rs
