[package]
name = "raytracer"
version = "0.1.0"
authors = ["Pseudo Photograph Company of ACM <ppca@ppca.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
indicatif = "0.15"
imageproc = "0.21"
rusttype = "0.9"
threadpool = "1.8"
raytracer_codegen = { path = "../raytracer_codegen" }
rand = "0.8.4"
nalgebra = "0.28.0"
kd-tree = "0.4.1"
typenum = "1.13.0"
cached = "0.24.1"